# Agents

./: .env.example  .envrc  .gitignore  LICENSE  README.md  pyproject.toml  research_assistant.py
data/: eval_tasks.jsonl  seed.txt
docs/superpowers/plans/: 2026-05-02-agents-phase-0-1-bootstrap-and-module-a.md  (+3 more)
mcp_servers/: notes_server.py
notebooks/: 01_bare_agent_loop.ipynb  02_tool_use.ipynb  03_structured_outputs.ipynb  04_react_and_extended_thinking.ipynb  05_planning_and_decomposition.ipynb  06_memory_primitives.ipynb  07_rag_for_agents.ipynb  08_evals_and_observability.ipynb  09_building_an_mcp_server.ipynb  10_consuming_mcp_in_an_agent.ipynb  11_orchestrator_and_subagents.ipynb  12_parallel_and_durable.ipynb  13_computer_use.ipynb  14_running_locally.ipynb  15_capstone_research_assistant.ipynb  _common.py
notebooks/_src/: 01_bare_agent_loop.py  02_tool_use.py  03_structured_outputs.py  04_react_and_extended_thinking.py  05_planning_and_decomposition.py  06_memory_primitives.py  07_rag_for_agents.py  08_evals_and_observability.py  09_building_an_mcp_server.py  10_consuming_mcp_in_an_agent.py  11_orchestrator_and_subagents.py  12_parallel_and_durable.py  13_computer_use.py  14_running_locally.py  15_capstone_research_assistant.py
src/agentlab/: __init__.py  llm.py  mcp_helpers.py  memory.py  spine.py  tools.py  types.py
tests/: conftest.py  test_llm.py  test_mcp_helpers.py  test_memory.py  test_smoke.py  test_spine.py  test_tools.py  test_types.py
tests/eval/: conftest.py  research_under_test.py  test_research_assistant.py
(+4 files in other folders)
