[project]
name = "agentlab"
version = "0.1.0"
description = "Curriculum for building AI agents on Claude — from bare loop to multi-agent + MCP."
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "rkaunismaa"}]
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.3.0",
    "ipykernel>=6.29.0",
    "jupytext>=1.16.4",
    "nbclient>=0.10.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
module-b = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0,<6",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
]
module-c = [
    "mcp>=1.0.0",
    "claude-agent-sdk>=0.1.72,<0.2.0",
]
module-d = [
    "openai>=1.55.0",
]
web-search = [
    "tavily-python>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q -m 'not eval'"
markers = [
    "eval: end-to-end agent evaluation tests (slow, costs money). Opt in: pytest -m eval",
]

[tool.jupytext]
formats = "notebooks///ipynb,notebooks/_src///py:percent"
